name:                hello-spec
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.20

library
  exposed-modules:     Lib
  build-depends:       base
  default-language:    Haskell2010

test-suite hello-spec-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
  default-language:    Haskell2010
