name:                hello-persistent
version:             0.1
license:             MIT
author:              hiloki owen
build-type:          Simple
cabal-version:       >=1.20

executable hello-persistent
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , QuasiQuotes
                     , TemplateHaskell
                     , TypeFamilies
  build-depends:       base
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , monad-logger
                     , resourcet
                     , time
                     , random
