name:                ini-test
version:             0.1.0.0
license:             MIT
author:              hiloki owen
build-type:          Simple
cabal-version:       >=1.20

executable ini-test
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ini
                     , text
                     , either-unwrap
