name:          hello-stache
version:       1.0.0
cabal-version: >= 1.20
build-type:    Simple

executable          hello-stache
    main-is:            Main.hs
    default-language:   Haskell2010
    build-depends:      base
                      , stache
                      , aeson
                      , text
                      , containers
