name:          hello-hamlet
version:       1.0.0
cabal-version: >= 1.20
build-type:    Simple

executable          hamlet
    hs-source-dirs:     .
    main-is:            Main.hs
    default-language:   Haskell2010
    default-extensions: TemplateHaskell
    build-depends:      base
                      , text
                      , blaze-html
                      , shakespeare
