name:                hello-rabbit
version:             0.1.0.0
author:              Phil Owen
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.20

executable hello-rabbit
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amqp
                     , bytestring
                     , time
                     , text
  default-language:    Haskell2010

