name:                inline-test
version:             0.1.0.0
license:             MIT
build-type:          Simple
cabal-version:       >=1.20

executable inline-test
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , inline-c

  default-language:    Haskell2010
