name:                r-interop
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.20

executable r-interop
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  QuasiQuotes
                     , GADTs
  build-depends:       base
                     , inline-r
